CLIENT-874: overflow bug fix

--- a/src/modules/utils/modals/receive/Receive.less
+++ b/src/modules/utils/modals/receive/Receive.less
@@ -15,6 +15,10 @@ md-dialog.modal-receive {
       height: 100%;
     }
 
+    .modal-content {
+      overflow: auto;
+    }
+
     position: relative;
     padding: 0;
     overflow: hidden;
