--- a/src/modules/utils/modals/sendAsset/send.modal.less
+++ b/src/modules/utils/modals/sendAsset/send.modal.less
@@ -25,6 +25,7 @@ md-dialog.modal-send {
     }
 
     .modal-content {
+      overflow: auto;
       padding-top: 60px;
     }
 
